# gtest_with_qt

./: CMakeLists.txt  README.md  battery.cpp  battery.h  battery_cell.cpp  battery_cell.h  i_battery.h  mock_battery_cell.h  test_battery.cpp  test_battery.h
